--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
-body{
-      background-color #ccc;
+body {
+      background-color: #ccc;
 font:sans-serif;
 }
 
@@ -8,4 +8,6 @@ h1 {
 
   article {
   font-style: italic
-color: #666;}
+color: #666;{
+
+ }
